--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "postcss": "^8.4.33",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-use": "^17.5.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
